<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Biometrics</string>
    
    <!-- Settings -->
    <string name="pref_confidence_threshold">Confidence threshold</string>
    <string name="pref_confidence_threshold_summary">Threshold for accepting object, suggestion is 0.4</string>
    <string name="pref_confidence_threshold_key">confidence_threshold</string>
    <string name="pref_confidence_threshold_dialog_title">Choose threshold:</string>
    
    <string name="pref_single_or_multiple">Recognition type</string>
    <string name="pref_single_or_multiple_summary">The type that this app does for you</string>
    <string name="pref_single_or_multiple_key">single_or_multiple</string>
    <string name="pref_single_or_multiple_dialog_title">Recognition type</string>

</resources>