<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <ListPreference android:entries="@array/pref_confidence_threshold"
        android:entryValues="@array/pref_confidence_threshold"
        android:dialogTitle="@string/pref_confidence_threshold_dialog_title"
        android:key="@string/pref_confidence_threshold_key"
        android:title="@string/pref_confidence_threshold"
        android:summary="@string/pref_confidence_threshold_summary"
        android:defaultValue="0.5"/>
	<ListPreference 
	    android:entries="@array/pref_single_or_multiple_objects"
	    android:entryValues="@array/pref_single_or_multiple_entry_values"
	    android:title="@string/pref_single_or_multiple"
	    android:summary="@string/pref_single_or_multiple_summary"
	    android:key="@string/pref_single_or_multiple_key"
	    android:dialogTitle="@string/pref_single_or_multiple_dialog_title"
	    android:defaultValue="1"/>
</PreferenceScreen>